<resources>
    <string name="app_name">Nandur</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="recommendation">Recommendation</string>
    <string name="profile">Profile</string>
    <string name="trending_events">Trending Events</string>
    <string name="show_all">Tampilkan Semua</string>
    <string name="lets_shop">Rekomendasi Tanaman di Surabaya</string>
    <string name="trending_plants">Trending Plants 2021</string>
    <string name="detail">Details</string>
    <string name="insert_to_cart">Masukkan ke Keranjang</string>
    <string name="market">Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>