<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_nav_home"/>

    <item
        android:id="@+id/navigation_search"
        android:title="@string/search"
        android:enabled="true"
        android:icon="@drawable/ic_nav_search" />

    <item
        android:id="@+id/navigation_market"
        android:title="@string/market"
        android:enabled="true"
        android:icon="@drawable/ic_nav_market"/>

    <item
        android:id="@+id/navigation_recommendation"
        android:title="@string/recommendation"
        android:enabled="true"
        android:icon="@drawable/ic_nav_plant"/>

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/ic_nav_profile"/>

</menu>